<!--
  ~ Copyright (c) 2014, IHTSDO. All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>org.ihtsdo.otf</groupId>
	<artifactId>snomed-content-service</artifactId>
    <version>1.0.5</version>
    <packaging>pom</packaging>
    <name>Snomed Content Service</name>
    <description>Snomed Content Service - Refset tool</description>
    <url>http://refset.ihtsdotools.org/</url>

    <modules>
        <module>snomed-model</module>
        <module>refset-model</module>
        <module>refset-graph-indexer</module>
        <module>snomed-graph-indexer</module>
        <module>snomed-graph-loader</module>
        <module>refset-query-interface</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>1.7</jdk.version>
        <target.dir>target</target.dir>
        <maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
        <timestamp>${maven.build.timestamp}</timestamp>

        <maven.compiler.plugin.version>3.1</maven.compiler.plugin.version>
        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
        <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
        <maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <maven.gpg.plugin.version>1.4</maven.gpg.plugin.version>
        <maven.javadoc.plugin.version>2.9</maven.javadoc.plugin.version>
        <maven.rar.plugin.version>2.2</maven.rar.plugin.version>
        <maven.bundle.plugin.version>2.3.7</maven.bundle.plugin.version>
        <findbugs.maven.plugin.version>2.5.5</findbugs.maven.plugin.version>
        <checkstyle.maven.plugin.version>2.12</checkstyle.maven.plugin.version>
        <maven.dependency.plugin.version>2.6</maven.dependency.plugin.version>
        <maven.shade.plugin.version>2.2</maven.shade.plugin.version>
        <main.basedir>${project.basedir}</main.basedir>
    </properties>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git://github.com/IHTSDO/snomed-content-service.git</connection>
        <url>https://github.com/IHTSDO/snomed-content-service</url>
    </scm>
    <issueManagement>
        <system>JIRA</system>
        <url>https://jira.ihtsdotools.org/secure/Dashboard.jspa</url>
    </issueManagement>
    <organization>
        <name>IHTSDO</name>
        <url>http://www.ihtsdo.org/</url>
    </organization>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>${findbugs.maven.plugin.version}</version>
                <configuration>
                    <findbugsXmlOutput>true</findbugsXmlOutput>
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>

        <profile>
            <id>test-Local</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>cobertura-maven-plugin</artifactId>
                        <version>2.6</version>
                        <configuration>
                            <instrumentation>
                                <ignores>
                                </ignores>
                                <excludes>
                                </excludes>
                            </instrumentation>
                        </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>clean</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <configuration combine.self="override">
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <testFailureIgnore>true</testFailureIgnore>
                            <argLine>
                                -Xms128m -Xmx1G -XX:MaxPermSize=128M
                            </argLine>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
            <reporting>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>cobertura-maven-plugin</artifactId>
                        <version>2.6</version>
                    </plugin>
                </plugins>
            </reporting>
        </profile>


        <profile>
            <properties>
                <argLine>
                    -Xms128m -Xmx1G -XX:MaxPermSize=128M
                </argLine>
            </properties>
            <id>test-coverage</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <configuration combine.self="override">
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <testFailureIgnore>true</testFailureIgnore>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>


        <!-- unfortunately it isn't possible to chain profiles, so we need to duplicate the javadoc plugin-->

        <profile>
            <id>findbugs</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>findbugs-maven-plugin</artifactId>
                        <version>${findbugs.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <phase>compile</phase>
                                <goals>
                                    <goal>check</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <failOnError>true</failOnError>
                            <excludeFilterFile>${main.basedir}/findbugs/findbugs-exclude.xml</excludeFilterFile>
                        </configuration>
                    </plugin>

                </plugins>
            </build>
        </profile>

        <profile>
            <id>nightly-build</id>
            <build>
                <plugins>


                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <configuration combine.self="override">
                            <parallel>none</parallel>
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>all-tests</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.plugin.version}</version>
                        <configuration combine.self="override">
                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            <parallel>none</parallel>
                            <argLine>-Xms128m -Xmx1G -XX:MaxPermSize=128M
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    
    <distributionManagement>
		<repository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://maven.ihtsdotools.org/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
